# caloutils

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  HISTORY.rst  LICENSE  Makefile  README.rst  demo.ipynb  pyproject.toml  venv_setup.sh
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-publish.yml
caloutils/: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  __init__.py  calorimeter.py  distances.py  pyproject.toml  tox.ini  venv_setup.sh
caloutils/caloutils/: __init__.py  caloutils.py
caloutils/caloutils/metrics/: pca.py  postprocess.py  shower.py
caloutils/caloutils/plotting/: binborders.py  hist1d.py  hist2d.py  infolut.py  ratioplot.py
caloutils/caloutils/processing/: alpharot.py  batch_to_Exyz.py  convcoord.py  dequantscaler.py  objcol.py  pc_from_voxel.py  seq.py  utils.py  voxelize.py
caloutils/caloutils/variables/: analyze_layers.py  calculate_variables.py  energy_ratios.py  first_principal_components.py  response.py
caloutils/distances/: __init__.py  ecdf.py  hist.py  scaled_w1.py  wasserstein.py
caloutils/docs/: conf.py  installation.rst  make.bat  usage.rst
caloutils/metrics/: postprocess.py  shower.py
caloutils/old/: setup.cfg  setup.py
caloutils/plotting/: binborders.py  hist1d.py  hist2d.py  ratioplot.py
caloutils/processing/: __init__.py  batch_to_Exyz.py  multihits.py  nhits_in_same_cell.py  objcol.py  pc_from_voxel.py  pc_to_voxel.py  shift_hits.py  shift_multi_hits.py  sum_multi_hits.py  sum_multihits.py  utils.py  voxelize.py
caloutils/tests/: __init__.py  test_caloutils.py  voxelize.py
caloutils/utils/: __init__.py  batch.py  scaling.py  superbatch.py
caloutils/variables/: __init__.py  analyze_layers.py  calculate_variables.py  energy_ratios.py  first_principal_components.py  response.py
docs/: Makefile  authors.rst  conf.py  contents.rst  contributing.rst  distances.rst  index.rst  processing.rst  requirements.txt  utils.rst  variables.rst
src/: __init__.py
src/metrics/: pca.py
src/plotting/: __init__.py  infolut.py
src/processing/: alpharot.py  idxscale.py  seq.py  voxelize.py
tests/: distances.py  pc_to_voxel.py  test_batch.py  test_caloutils.py  test_superbatch.py  voxelize.py
tests/processing/: test_shift_hits.py  test_sum_multihits.py
