[project]
name = "caloutils"
version = "0.0.1"
authors = [
  { name="mova", email="mova@users.noreply.github.com" },
  { name="kaechb", email="kaechb@users.noreply.github.com" },
]
description = "Metrics and tools for evaluation generative models for calorimeter shower based on pytorch_geometric."
requires-python = ">=3.8"
readme="README.rst"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "torch_geometric>=2.3.0",
    "torch-scatter>=2.1.1",
]
[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
]
doc = ["sphinx"]


[project.urls]
"Homepage" = "https://github.com/DeGeSim/caloutils"
"Bug Tracker" = "https://github.com/DeGeSim/caloutils/issues"

# [project.scripts]
# flit = "flit:main"



[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit_core >=3.2,<4",
  "ruff>=0.0.280",
  "black==21.7b0",
]

[tool.bdist_wheel]
universal = 1


# [tool.bumpversion]
# current_version = 0.1.0
# commit = True
# tag = True

# [tool.bumpversion:file:setup.py]
# search = version='{current_version}'
# replace = version='{new_version}'

# [tool.bumpversion:file:caloutils/__init__.py]
# search = __version__ = '{current_version}'
# replace = __version__ = '{new_version}'




[tool.pytest.ini_options]
python_files = "*.py"
testpaths = [
  "tests",
]
#--ignore=E203,E302
[tool.flake8]
exclude = [
  "fgsim/old/*",
  ".tox",
  "docs",
  "__pycache__",
]
ignore = "E203,E302,W503,F541,"
max-line-length = 84
per-file-ignores = """
    fgsim/__main__.py: E402,F401,
    **/__init__.py: F401
    """

[tool.isort]
profile = "black"
line_length = 84

[tool.black]
exclude = '''
(
  /(
    \..*
    | _build
    | buck-out
    | build
    | dist
    | fgsim/old
    | fgsim/geo/libs
  )
)
'''
preview = true
include = '.*\.pyi?$'
line-length = 84
target-version = ['py310']

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
exclude = "(\\..*|_build|dist|fgsim/old|fgsim/geo/libs)"
ignore_missing_imports = true
no_implicit_reexport = true
python_version = 38
show_error_codes = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 85
exclude = [
    "fgsim/old/*",
    ".tox",
    "docs",
    "__pycache__",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402","F401"]



